<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sadLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="changeFragment"
    android:background="@color/sadBackground">

    <TextView
        android:id="@+id/sadQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="serif-monospace"
        android:text="@string/sad_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/hungryBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sadView"
        android:layout_width="193dp"
        android:layout_height="462dp"
        android:contentDescription="@string/sad"
        android:onClick="changeFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sadQuestion"
        app:srcCompat="@drawable/sad_image" />

    <TextView
        android:id="@+id/hugQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/hug_question"
        android:textColor="@color/happyBackground"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sadView" />

    <TextView
        android:id="@+id/sadContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/pressContinue"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hugQuestion" />
</androidx.constraintlayout.widget.ConstraintLayout>