<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hungryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="changeFragment"
    android:background="@color/hungryBackground">

    <ImageView
        android:id="@+id/hungryView"
        android:layout_width="365dp"
        android:layout_height="643dp"
        android:contentDescription="@string/hungry"
        android:onClick="changeFragment"
        android:rotation="90"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/hungry_image" />

    <TextView
        android:id="@+id/hungryContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/pressContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungryView" />

    <TextView
        android:id="@+id/hungryQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="monospace"
        android:text="@string/hungry_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hungryView" />

    <TextView
        android:id="@+id/snackMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:fontFamily="serif-monospace"
        android:text="@string/snack_meal"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/hungryContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>