<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/introBackground">

    <TextView
        android:id="@+id/introText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="serif-monospace"
        android:text="@string/tellMe_intro"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/continueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="serif-monospace"
        android:text="@string/tellMe_continue"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/happyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/buttonBackground"
        android:fontFamily="serif-monospace"
        android:onClick="changeFragment"
        android:text="@string/happy"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introText" />

    <Button
        android:id="@+id/hungryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/buttonBackground"
        android:fontFamily="serif-monospace"
        android:onClick="changeFragment"
        android:text="@string/hungry"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/happyButton"
        app:layout_constraintTop_toBottomOf="@+id/introText" />

    <Button
        android:id="@+id/madButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/buttonBackground"
        android:fontFamily="serif-monospace"
        android:onClick="changeFragment"
        android:text="@string/mad"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happyButton" />

    <Button
        android:id="@+id/sadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/buttonBackground"
        android:fontFamily="serif-monospace"
        android:onClick="changeFragment"
        android:text="@string/sad"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungryButton" />

    <Button
        android:id="@+id/tiredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:backgroundTint="@color/buttonBackground"
        android:fontFamily="serif-monospace"
        android:onClick="changeFragment"
        android:text="@string/tired"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/continueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introText"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/clickCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif-monospace"
        android:text=""
        android:textColor="@color/happyBackground"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/continueText"
        app:layout_constraintEnd_toStartOf="@+id/click"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiredButton"
        app:layout_constraintVertical_bias="0.982" />

    <TextView
        android:id="@+id/click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/click_screen"
        android:textColor="@color/happyBackground"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/continueText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/steps"
        android:textColor="@color/happyBackground"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/continueText"
        app:layout_constraintEnd_toStartOf="@+id/clickCount"
        app:layout_constraintHorizontal_bias="0.718"
         app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/stepCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif-monospace"
        android:text=""
        android:textColor="@color/happyBackground"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/continueText"
        app:layout_constraintEnd_toStartOf="@+id/steps"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>