<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/madLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="changeFragment"
    android:background="@color/madBackground">

    <ImageView
        android:id="@+id/madView"
        android:layout_width="348dp"
        android:layout_height="693dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/mad"
        android:onClick="changeFragment"
        android:rotation="90"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mad_image" />

    <TextView
        android:id="@+id/madQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="serif-monospace"
        android:text="@string/mad_question"
        android:textColor="@color/happyBackground"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/madAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="416dp"
        android:fontFamily="serif-monospace"
        android:text="@string/mad_advice"
        android:textColor="@color/hungryBackground"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madQuestion" />

    <TextView
        android:id="@+id/madContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/pressContinue"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madAdvice" />

</androidx.constraintlayout.widget.ConstraintLayout>